# AI-ML_Framework

./: CMakeLists.txt
include/: Network.hpp  function.hpp  lin_regression.hpp  log_regression.hpp  matrix.hpp  vector.hpp
src/: Network.cpp  function.cpp  lin_regression.cpp  log_regression.cpp  main.cpp  matrix.cpp  test.cpp  vector.cpp
